syntax = "proto3";
import "google/protobuf/timestamp.proto";

package ecliptix.proto.membership;
option csharp_namespace = "Ecliptix.Protobuf.Membership";

// Session Management Messages
message SessionValidationRequest {
  string session_token = 1;
  string phone_number = 2;
}

message SessionValidationResponse {
  bool is_valid = 1;
  google.protobuf.Timestamp expires_at = 2;
  optional string message = 3;
}

message InvalidateSessionRequest {
  string session_token = 1;
  string phone_number = 2;
}

message InvalidateSessionResponse {
  bool success = 1;
  optional string message = 2;
}

message InvalidateAllSessionsRequest {
  string phone_number = 1;
}

message InvalidateAllSessionsResponse {
  bool success = 1;
  int32 sessions_invalidated = 2;
  optional string message = 3;
}

// Password Management Messages
message OpaquePasswordChangeInitRequest {
  string phone_number = 1;
  bytes current_password_oprf = 2;
  bytes new_password_oprf = 3;
}

message OpaquePasswordChangeInitResponse {
  bytes server_oprf_response = 1;
  bytes server_ephemeral_public_key = 2;
  bytes current_registration_record = 3;
  bytes server_state_token = 4;
  
  PasswordChangeResult result = 5;
  optional string message = 6;
  
  enum PasswordChangeResult {
    SUCCEEDED = 0;
    INVALID_CURRENT_PASSWORD = 1;
    RATE_LIMITED = 2;
  }
}

message OpaquePasswordChangeCompleteRequest {
  string phone_number = 1;
  bytes client_ephemeral_public_key = 2;
  bytes client_mac = 3;
  bytes new_registration_record = 4;
  bytes server_state_token = 5;
}

message OpaquePasswordChangeCompleteResponse {
  bytes server_mac = 1;
  PasswordChangeResult result = 2;
  optional string message = 3;
  
  enum PasswordChangeResult {
    SUCCEEDED = 0;
    INVALID_CREDENTIALS = 1;
    RATE_LIMITED = 2;
  }
}

// Account Recovery Messages  
message AccountRecoveryInitRequest {
  string phone_number = 1;
  string recovery_method = 2; // "sms", "email", etc.
}

message AccountRecoveryInitResponse {
  string recovery_token = 1;
  google.protobuf.Timestamp expires_at = 2;
  RecoveryResult result = 3;
  optional string message = 4;
  
  enum RecoveryResult {
    SUCCEEDED = 0;
    USER_NOT_FOUND = 1;
    RATE_LIMITED = 2;
    METHOD_NOT_AVAILABLE = 3;
  }
}

message AccountRecoveryCompleteRequest {
  string phone_number = 1;
  string recovery_token = 2;
  string verification_code = 3;
  bytes new_registration_record = 4;
}

message AccountRecoveryCompleteResponse {
  RecoveryResult result = 1;
  optional string message = 2;
  
  enum RecoveryResult {
    SUCCEEDED = 0;
    INVALID_TOKEN = 1;
    INVALID_CODE = 2;
    EXPIRED = 3;
  }
}